experiments/30-https-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: https-demo
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
